RESOLVED FIXED173039
ASSERTION FAILED: !m_isolatedWorld->isNormal() || m_wrapper || !m_jsFunction on webrtc/ephemeral-certificates-and-cnames.html
https://bugs.webkit.org/show_bug.cgi?id=173039
Summary ASSERTION FAILED: !m_isolatedWorld->isNormal() || m_wrapper || !m_jsFunction ...
Matt Lewis
Reported 2017-06-06 15:49:11 PDT
webrtc/ephemeral-certificates-and-cnames.html is a flaky crash https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=webrtc%2Fephemeral-certificates-and-cnames.html https://build.webkit.org/builders/Apple%20Sierra%20Debug%20WK2%20(Tests)/builds/1388 https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r217849%20(1388)/results.html Shows to be happening on Sierra Debug WK2 Added in https://trac.webkit.org/changeset/214690/webkit ASSERTION FAILED: !m_isolatedWorld->isNormal() || m_wrapper || !m_jsFunction /Volumes/Data/slave/sierra-debug/build/Source/WebCore/bindings/js/JSEventListener.h(128) : JSC::JSObject *WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext *) const 1 0x11e391b1d WTFCrash 2 0x11321d0c3 WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext*) const 3 0x113644cae WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext*, WebCore::Event*) 4 0x112add396 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener>, 1ul, WTF::CrashOnOverflow, 16ul>) 5 0x112adcf5e WebCore::EventTarget::fireEventListeners(WebCore::Event&) 6 0x112adcdf9 WebCore::EventTarget::dispatchEvent(WebCore::Event&) 7 0x1147a0ebc WebCore::RTCPeerConnection::fireEvent(WebCore::Event&) 8 0x1142a1bba WebCore::PeerConnectionBackend::doneGatheringCandidates() 9 0x113efe6a6 WebCore::LibWebRTCMediaEndpoint::OnIceGatheringChange(webrtc::PeerConnectionInterface::IceGatheringState)::$_10::operator()() const 10 0x113efe5a9 WTF::Function<void ()>::CallableWrapper<WebCore::LibWebRTCMediaEndpoint::OnIceGatheringChange(webrtc::PeerConnectionInterface::IceGatheringState)::$_10>::call() 11 0x11e3c19ae WTF::Function<void ()>::operator()() const 12 0x11e3c15e4 WTF::dispatchFunctionsFromMainThread() 13 0x11e3c39b1 WTF::timerFired(__CFRunLoopTimer*, void*) 14 0x7fffa8859e04 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 15 0x7fffa8859a93 __CFRunLoopDoTimer 16 0x7fffa88595ea __CFRunLoopDoTimers 17 0x7fffa8850fc1 __CFRunLoopRun 18 0x7fffa8850544 CFRunLoopRunSpecific 19 0x7fffa7db0ebc RunCurrentEventLoopInMode 20 0x7fffa7db0cf1 ReceiveNextEventCommon 21 0x7fffa7db0b26 _BlockUntilNextEventMatchingListInModeWithFilter 22 0x7fffa6349a54 _DPSNextEvent 23 0x7fffa6ac57ee -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] 24 0x7fffa633e3db -[NSApplication run] 25 0x7fffa6308e0e NSApplicationMain 26 0x7fffbe7e18c7 _xpc_objc_main 27 0x7fffbe7e02e4 xpc_main 28 0x109e5d105 main 29 0x7fffbe588235 start 30 0x1
Attachments
Patch (2.94 KB, patch)
2017-06-08 09:17 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2017-06-06 15:50:02 PDT
Geoffrey Garen
Comment 2 2017-06-08 09:15:39 PDT
The problem here is that RTCPeerConnection doesn't adopt any of our ActiveDOMObject garbage collection APIs.
Chris Dumez
Comment 3 2017-06-08 09:16:22 PDT
(In reply to Geoffrey Garen from comment #2) > The problem here is that RTCPeerConnection doesn't adopt any of our > ActiveDOMObject garbage collection APIs. Yes, I said so on the radar :)
Chris Dumez
Comment 4 2017-06-08 09:17:29 PDT
WebKit Commit Bot
Comment 5 2017-06-08 10:13:20 PDT
Comment on attachment 312309 [details] Patch Clearing flags on attachment: 312309 Committed r217932: <http://trac.webkit.org/changeset/217932>
WebKit Commit Bot
Comment 6 2017-06-08 10:13:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.